Bug 1043644 - Use the content viewer bounds instead of the view bounds if available. r=tn